// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`relations resolvers execution composite unique key should properly call PrismaClient on fetching array relations: findManyPost relations call args 1`] = `
Array [
  Array [
    Object {
      "select": Object {
        "author": Object {},
        "color": true,
        "title": true,
      },
      "where": Object {
        "OR": Array [
          Object {
            "color": "BLUE",
            "title": "Post 1",
          },
        ],
      },
    },
  ],
]
`;

exports[`relations resolvers execution composite unique key should properly call PrismaClient on fetching array relations: post with author mocked response 1`] = `
Object {
  "post": Object {
    "author": Object {
      "id": 1,
      "name": "User 1",
    },
    "color": "BLUE",
    "text": "Post text",
    "title": "Post 1",
  },
}
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations with args: findManyUser relations call args 1`] = `
Array [
  Array [
    Object {
      "select": Object {
        "id": true,
        "posts": UserPostsArgs {
          "first": 1,
          "skip": 1,
          "where": PostWhereInput {
            "content": StringFilter {
              "startsWith": "test",
            },
          },
        },
      },
      "where": Object {
        "OR": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
        ],
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations with args: users with posts mocked response 1`] = `
Object {
  "users": Array [
    Object {
      "name": "Test 1",
      "posts": null,
    },
    Object {
      "name": "Test 2",
      "posts": Array [
        Object {
          "color": "RED",
          "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
        },
        Object {
          "color": "BLUE",
          "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
        },
      ],
    },
  ],
}
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations: findManyUser relations call args 1`] = `
Array [
  Array [
    Object {
      "select": Object {
        "id": true,
        "posts": UserPostsArgs {},
      },
      "where": Object {
        "OR": Array [
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
        ],
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching array relations: users with posts mocked response 1`] = `
Object {
  "users": Array [
    Object {
      "name": "Test 1",
      "posts": null,
    },
    Object {
      "name": "Test 2",
      "posts": Array [
        Object {
          "color": "RED",
          "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
        },
        Object {
          "color": "BLUE",
          "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
        },
      ],
    },
  ],
}
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching single relation: findManyPost relations call args 1`] = `
Array [
  Array [
    Object {
      "select": Object {
        "author": Object {},
        "uuid": true,
      },
      "where": Object {
        "OR": Array [
          Object {
            "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
          },
          Object {
            "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
          },
        ],
      },
    },
  ],
]
`;

exports[`relations resolvers execution single primary key should properly call PrismaClient on fetching single relation: posts with authors mocked response 1`] = `
Object {
  "posts": Array [
    Object {
      "author": Object {
        "id": 1,
        "name": "Test 1",
      },
      "uuid": "b0c0d78e-4dff-4cdd-ba23-9b417dc684e2",
    },
    Object {
      "author": Object {
        "id": 1,
        "name": "Test 1",
      },
      "uuid": "72c8a188-3d46-45b3-b23f-7d420aa282f1",
    },
  ],
}
`;
